--- a/index.html
+++ b/index.html
@@ -5,18 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 05</title>
+    <link rel="icon" href="" sizes="16x16">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/normilize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
+
+    <div class="container">
+        <!-- Create Nav Bar -->
+        <nav>
+            <h2>Gilfoyle</h2>
+            <div>
+                <button>Login</button>
+                <button>Sign UP</button>
+            </div>
+        </nav>
+        <!-- Create content -->
+
+        <div class="content">
+            <h2>Modern lighting</h2>
+            <h3>Free Multipurpose Responsive Landing Page For</h3>
+            <img src="img/pc.png" alt="">
+        </div>
+    </div>
     
+
+
+
 
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
