--- a/index.html
+++ b/index.html
@@ -18,21 +18,92 @@
 <body>
 
     <div class="container">
-        <!-- Create Nav Bar -->
-        <nav>
-            <h2>Gilfoyle</h2>
-            <div>
-                <button>Login</button>
-                <button>Sign UP</button>
-            </div>
-        </nav>
+        <!-- Create header -->
+        <header>
+            <nav>
+                <h2>Gilfoyle</h2>
+                <span class="menu material-symbols-outlined">menu</span>
+                <!-- <span class="close material-symbols-outlined">close</span> -->
+                <div class="drop_down">
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Section</li>
+                        <li>Home</li>
+                    </ul>
+                </div>
+            </nav>
+            <h2>Welcome to Siimple</h2>
+            <h4>Please, fill out the for below to be notified for the latest updates!</h4>
+            <form action="">
+                <input type="text" placeholder="Enter Your Name"><br>
+                <input type="email" placeholder="Enter Your Email"><br>
+                <button>Notify me!</button>
+            </form>
+        </header>
         <!-- Create content -->
-
         <div class="content">
-            <h2>Modern lighting</h2>
-            <h3>Free Multipurpose Responsive Landing Page For</h3>
-            <img src="img/pc.png" alt="">
+            <img src="img/g1.jpg" alt="">
+            <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+            <div class="done">
+                <span class="material-symbols-outlined">done_all</span>
+                <p> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="done">
+                <span class="material-symbols-outlined">done_all</span>
+                <p> Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+            </div>
+            <div class="done">
+                <span class="material-symbols-outlined">done_all</span>
+                <p> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
+            </div>
         </div>
+
+
+
+
+        <!-- section -->
+        <div class="section">
+            <img src="img/g2.jpg" alt="">
+            <span class="material-symbols-outlined">remove_from_queue</span>
+            <h3>Our Mission</h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
+        </div>
+
+        <div class="section">
+            <img src="img/g3.jpg" alt="">
+            <span class="material-symbols-outlined">team_dashboard</span>
+            <h3>Our Mission</h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
+        </div>
+
+        <div class="section">
+            <img src="img/g4.jpg" alt="">
+            <span class="material-symbols-outlined">account_balance</span>
+            <h3>Our Mission</h3>
+            <h4>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
+        </div>
+
+        <!-- Faq  -->
+        <div class="faq">
+            <h3 class="question">Non consectetur a erat nam at lectus urna duis?</h3>
+            <p class="answer">Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+        </div>
+        <div class="faq">
+            <h3 class="question">Non consectetur a erat nam at lectus urna duis?</h3>
+            <p class="answer">Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+        </div>
+
+        <div class="contact">
+            <h2>Contact Us</h2>
+            <div class="index">
+                <span class="material-symbols-outlined">pin_drop</span>
+                <p>A108 Adam Street</p><br>
+                <p>New York, NY 535022</p>
+            </div>
+        </div>
+        
     </div>
     
 
