--- a/index.html
+++ b/index.html
@@ -99,10 +99,37 @@
             <h2>Contact Us</h2>
             <div class="index">
                 <span class="material-symbols-outlined">pin_drop</span>
-                <p>A108 Adam Street</p><br>
-                <p>New York, NY 535022</p>
+                <div class="info">
+                    <p>A108 Adam Street</p>
+                    <p>New York, NY 535022</p>
+                </div>
+            </div>
+
+            <div class="index">
+                <span class="material-symbols-outlined">mark_email_unread</span>
+                <div class="info">
+                    <p>info@example.com</p>
+                </div>
+            </div>
+
+            <div class="index">
+                <span class="material-symbols-outlined">phone_in_talk</span>
+                <div class="info">
+                    <p>+1 5589 55488 55s</p>
+                </div>
+            </div>
+
+
+            <div class="data">
+                <input type="text" placeholder="Your Name"><br>
+                <input type="text" placeholder="Your Email"><br>
+                <input type="text" placeholder="Your Subject"><br>
+                <textarea name="" id="" cols="42.7" rows="10" placeholder="Message" ></textarea><br>
+                <button>Send Message</button>
             </div>
         </div>
+
+
         
     </div>
     
