--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 05</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Open+Sans:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
     <link rel="icon" href="" sizes="16x16">
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/all.min.css">
@@ -123,7 +126,7 @@
                 <input type="text" placeholder="Your Name"><br>
                 <input type="text" placeholder="Your Email"><br>
                 <input type="text" placeholder="Your Subject"><br>
-                <textarea name="" id="" cols="42.7" rows="10" placeholder="Message" ></textarea><br>
+                <textarea name="" id="" cols="33" rows="10" placeholder="Message" ></textarea><br>
                 <button>Send Message</button>
             </div>
         </div>
